# process-scheduler-python

./: .gitignore  README.md  pyproject.toml  teste.py
.github/workflows/: pipeline.yaml
process_scheduler_python/: main.py  xlsx.py
process_scheduler_python/algorithms/: base_algorithm.py  fcfs.py  first_come_first_served.py  gui.py  priority_scheduling.py  shortest_job_first.py  test.py
process_scheduler_python/gui/: main.py
process_scheduler_python/utils/: factories.py  notify_message.py  process.py  run_simulations.py
